// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JSONEditor > render table mode 1`] = `
<div>
  <!---->
  <!---->
   
  <div
    class="jse-main svelte-57bmz4"
  >
    <!---->
    <!---->
    <div
      class="jse-table-mode svelte-u14cgx"
      role="table"
    >
      <div
        class="jse-menu svelte-pf7s2l"
      >
        <!---->
         
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button jse-first svelte-pf7s2l"
          title="Switch to text mode (current mode: table)"
          type="button"
        >
          <!---->
           
          text
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button  svelte-pf7s2l"
          title="Switch to tree mode (current mode: table)"
          type="button"
        >
          <!---->
           
          tree
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button jse-last jse-selected svelte-pf7s2l"
          title="Switch to table mode (current mode: table)"
          type="button"
        >
          <!---->
           
          table
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-pf7s2l"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-sort svelte-pf7s2l"
          title="Sort"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="14.222222222222221"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 576 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M151.6 469.6C145.5 476.2 137 480 128 480s-17.5-3.8-23.6-10.4l-88-96c-11.9-13-11.1-33.3 2-45.2s33.3-11.1 45.2 2L96 365.7 96 64c0-17.7 14.3-32 32-32s32 14.3 32 32l0 301.7 32.4-35.4c11.9-13 32.2-13.9 45.2-2s13.9 32.2 2 45.2l-88 96zM320 32l32 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l96 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-96 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l160 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-160 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l224 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-224 0c-17.7 0-32-14.3-32-32s14.3-32 32-32z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-transform svelte-pf7s2l"
          title="Transform contents (filter, sort, project)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M3.9 54.9C10.5 40.9 24.5 32 40 32l432 0c15.5 0 29.5 8.9 36.1 22.9s4.6 30.5-5.2 42.5L320 320.9 320 448c0 12.1-6.8 23.2-17.7 28.6s-23.8 4.3-33.5-3l-64-48c-8.1-6-12.8-15.5-12.8-25.6l0-79.1L9 97.3C-.7 85.4-2.8 68.8 3.9 54.9z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-search svelte-pf7s2l"
          title="Search (Ctrl+F)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-contextmenu svelte-pf7s2l"
          title="Open context menu (Click here, right click on the selection, or use the context menu button or Ctrl+Q)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 128 512"
            width="4"
          >
            <!---->
            <!---->
            <path
              d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-pf7s2l"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-undo svelte-pf7s2l"
          disabled=""
          title="Undo (Ctrl+Z)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M125.7 160l50.3 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L48 224c-17.7 0-32-14.3-32-32L16 64c0-17.7 14.3-32 32-32s32 14.3 32 32l0 51.2L97.6 97.6c87.5-87.5 229.3-87.5 316.8 0s87.5 229.3 0 316.8s-229.3 87.5-316.8 0c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0c62.5 62.5 163.8 62.5 226.3 0s62.5-163.8 0-226.3s-163.8-62.5-226.3 0L125.7 160z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-redo svelte-pf7s2l"
          disabled=""
          title="Redo (Ctrl+Shift+Z)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M386.3 160L336 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32-14.3 32-32l0-128c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 51.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0s-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3s163.8-62.5 226.3 0L386.3 160z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <div
          class="jse-space svelte-pf7s2l"
        />
        
        
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <label
        class="jse-hidden-input-label svelte-u14cgx"
      >
        <input
          class="jse-hidden-input svelte-u14cgx"
          readonly=""
          tabindex="-1"
          type="text"
        />
      </label>
       
      <div
        class="jse-search-box-container svelte-u14cgx"
      >
        <!---->
        
        <!---->
      </div>
       
      <div
        class="jse-contents svelte-u14cgx"
      >
        <table
          class="jse-table-main svelte-u14cgx"
        >
          <tbody>
            <tr
              class="jse-table-row jse-table-row-header svelte-u14cgx"
            >
              <th
                class="jse-table-cell jse-table-cell-header svelte-u14cgx"
              >
                <!---->
              </th>
              <th
                class="jse-table-cell jse-table-cell-header svelte-u14cgx"
              >
                <button
                  class="jse-column-header svelte-2i3vdx"
                  title="id (Click to sort the data by this column)"
                  type="button"
                >
                  <span
                    class="jse-column-name"
                  >
                    id
                  </span>
                   
                  <!---->
                </button>
                <!---->
              </th>
              <th
                class="jse-table-cell jse-table-cell-header svelte-u14cgx"
              >
                <button
                  class="jse-column-header svelte-2i3vdx"
                  title="name (Click to sort the data by this column)"
                  type="button"
                >
                  <span
                    class="jse-column-name"
                  >
                    name
                  </span>
                   
                  <!---->
                </button>
                <!---->
              </th>
              <!---->
              <!---->
            </tr>
            <tr
              class="jse-table-invisible-start-section svelte-u14cgx"
            >
              <td
                class="svelte-u14cgx"
                colspan="2"
                style="height: 0px;"
              />
            </tr>
            <tr
              class="jse-table-row svelte-u14cgx"
            >
              <th
                class="jse-table-cell jse-table-cell-gutter svelte-u14cgx"
              >
                0 
                <!---->
              </th>
              <!---->
              <td
                class="jse-table-cell svelte-u14cgx"
                data-path="%2F0%2Fid"
              >
                <div
                  class="jse-value-outer svelte-u14cgx"
                >
                  <!---->
                  <!---->
                  <!---->
                  <div
                    class="jse-value jse-number jse-table-cell svelte-c0g9qz"
                    data-type="selectable-value"
                    role="button"
                    tabindex="-1"
                  >
                    1
                    <!---->
                  </div>
                  
                  
                  
                  <!---->
                  <!---->
                </div>
                 
                <!---->
              </td>
              <td
                class="jse-table-cell svelte-u14cgx"
                data-path="%2F0%2Fname"
              >
                <div
                  class="jse-value-outer svelte-u14cgx"
                >
                  <!---->
                  <!---->
                  <!---->
                  <div
                    class="jse-value jse-string jse-empty jse-table-cell svelte-c0g9qz"
                    data-type="selectable-value"
                    role="button"
                    tabindex="-1"
                  >
                    
                    <!---->
                  </div>
                  
                  
                  
                  <!---->
                  <!---->
                </div>
                 
                <!---->
              </td>
              <!---->
              <!---->
            </tr>
            <tr
              class="jse-table-row svelte-u14cgx"
            >
              <th
                class="jse-table-cell jse-table-cell-gutter svelte-u14cgx"
              >
                1 
                <!---->
              </th>
              <!---->
              <td
                class="jse-table-cell svelte-u14cgx"
                data-path="%2F1%2Fid"
              >
                <div
                  class="jse-value-outer svelte-u14cgx"
                >
                  <!---->
                  <!---->
                  <!---->
                  <div
                    class="jse-value jse-number jse-table-cell svelte-c0g9qz"
                    data-type="selectable-value"
                    role="button"
                    tabindex="-1"
                  >
                    2
                    <!---->
                  </div>
                  
                  
                  
                  <!---->
                  <!---->
                </div>
                 
                <!---->
              </td>
              <td
                class="jse-table-cell svelte-u14cgx"
                data-path="%2F1%2Fname"
              >
                <div
                  class="jse-value-outer svelte-u14cgx"
                >
                  <!---->
                  <!---->
                  <!---->
                  <div
                    class="jse-value jse-string jse-table-cell svelte-c0g9qz"
                    data-type="selectable-value"
                    role="button"
                    tabindex="-1"
                  >
                    Joe
                    <!---->
                  </div>
                  
                  
                  
                  <!---->
                  <!---->
                </div>
                 
                <!---->
              </td>
              <!---->
              <!---->
            </tr>
            <tr
              class="jse-table-row svelte-u14cgx"
            >
              <th
                class="jse-table-cell jse-table-cell-gutter svelte-u14cgx"
              >
                2 
                <!---->
              </th>
              <!---->
              <td
                class="jse-table-cell svelte-u14cgx"
                data-path="%2F2%2Fid"
              >
                <div
                  class="jse-value-outer svelte-u14cgx"
                >
                  <!---->
                  <!---->
                  <!---->
                  <div
                    class="jse-value jse-number jse-table-cell svelte-c0g9qz"
                    data-type="selectable-value"
                    role="button"
                    tabindex="-1"
                  >
                    3
                    <!---->
                  </div>
                  
                  
                  
                  <!---->
                  <!---->
                </div>
                 
                <!---->
              </td>
              <td
                class="jse-table-cell svelte-u14cgx"
                data-path="%2F2%2Fname"
              >
                <div
                  class="jse-value-outer svelte-u14cgx"
                >
                  <!---->
                  <!---->
                  <!---->
                  <div
                    class="jse-value jse-string jse-empty jse-table-cell svelte-c0g9qz"
                    data-type="selectable-value"
                    role="button"
                    tabindex="-1"
                  >
                    
                    <!---->
                  </div>
                  
                  
                  
                  <!---->
                  <!---->
                </div>
                 
                <!---->
              </td>
              <!---->
              <!---->
            </tr>
            <!---->
            <tr
              class="jse-table-invisible-end-section svelte-u14cgx"
            >
              <td
                class="svelte-u14cgx"
                colspan="2"
                style="height: 0px;"
              />
            </tr>
          </tbody>
        </table>
      </div>
       
      <!---->
       
      <!---->
       
      <!---->
      
      <!---->
      <!---->
      <!---->
    </div>
     
    <!---->
     
    <!---->
    
    
    <!---->
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
  <!---->
  
</div>
`;

exports[`JSONEditor > render text mode 1`] = `
<div>
  <!---->
  <!---->
   
  <div
    class="jse-main svelte-57bmz4"
  >
    <!---->
    <div
      class="jse-text-mode svelte-xt61xw"
    >
      <div
        class="jse-menu svelte-pf7s2l"
      >
        <!---->
         
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button jse-first jse-selected svelte-pf7s2l"
          title="Switch to text mode (current mode: text)"
          type="button"
        >
          <!---->
           
          text
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button  svelte-pf7s2l"
          title="Switch to tree mode (current mode: text)"
          type="button"
        >
          <!---->
           
          tree
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button jse-last svelte-pf7s2l"
          title="Switch to table mode (current mode: text)"
          type="button"
        >
          <!---->
           
          table
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-pf7s2l"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-format svelte-pf7s2l"
          title="Format JSON: add proper indentation and new lines (Ctrl+I)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M 0,32 v 64 h 416 v -64 z M 160,160 v 64 h 352 v -64 z M 160,288 v 64 h 288 v -64 z M 0,416 v 64 h 320 v -64 z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-compact svelte-pf7s2l"
          title="Compact JSON: remove all white spacing and new lines (Ctrl+Shift+I)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M 0,32 v 64 h 512 v -64 z M 0,160 v 64 h 512 v -64 z M 0,288 v 64 h 352 v -64 z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-pf7s2l"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-sort svelte-pf7s2l"
          title="Sort"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="14.222222222222221"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 576 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M151.6 469.6C145.5 476.2 137 480 128 480s-17.5-3.8-23.6-10.4l-88-96c-11.9-13-11.1-33.3 2-45.2s33.3-11.1 45.2 2L96 365.7 96 64c0-17.7 14.3-32 32-32s32 14.3 32 32l0 301.7 32.4-35.4c11.9-13 32.2-13.9 45.2-2s13.9 32.2 2 45.2l-88 96zM320 32l32 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l96 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-96 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l160 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-160 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l224 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-224 0c-17.7 0-32-14.3-32-32s14.3-32 32-32z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-transform svelte-pf7s2l"
          title="Transform contents (filter, sort, project)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M3.9 54.9C10.5 40.9 24.5 32 40 32l432 0c15.5 0 29.5 8.9 36.1 22.9s4.6 30.5-5.2 42.5L320 320.9 320 448c0 12.1-6.8 23.2-17.7 28.6s-23.8 4.3-33.5-3l-64-48c-8.1-6-12.8-15.5-12.8-25.6l0-79.1L9 97.3C-.7 85.4-2.8 68.8 3.9 54.9z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-search svelte-pf7s2l"
          title="Search (Ctrl+F)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-pf7s2l"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-undo svelte-pf7s2l"
          disabled=""
          title="Undo (Ctrl+Z)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M125.7 160l50.3 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L48 224c-17.7 0-32-14.3-32-32L16 64c0-17.7 14.3-32 32-32s32 14.3 32 32l0 51.2L97.6 97.6c87.5-87.5 229.3-87.5 316.8 0s87.5 229.3 0 316.8s-229.3 87.5-316.8 0c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0c62.5 62.5 163.8 62.5 226.3 0s62.5-163.8 0-226.3s-163.8-62.5-226.3 0L125.7 160z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-redo svelte-pf7s2l"
          disabled=""
          title="Redo (Ctrl+Shift+Z)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M386.3 160L336 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32-14.3 32-32l0-128c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 51.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0s-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3s163.8-62.5 226.3 0L386.3 160z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <div
          class="jse-space svelte-pf7s2l"
        />
        
        
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <div
        class="jse-contents svelte-xt61xw"
      >
        <div
          class="cm-editor ͼ1 ͼ2 ͼ4 ͼt"
        >
          <div
            aria-live="polite"
            class="cm-announced"
          />
          <div
            class="cm-scroller"
            tabindex="-1"
          >
            <div
              aria-hidden="true"
              class="cm-gutters"
              style="min-height: 168px; position: sticky;"
            >
              <div
                class="cm-gutter cm-gutter-lint"
              >
                <div
                  class="cm-gutterElement cm-activeLineGutter"
                  style="height: 14px;"
                />
              </div>
              <div
                class="cm-gutter cm-lineNumbers"
              >
                <div
                  class="cm-gutterElement"
                  style="height: 0px; visibility: hidden; pointer-events: none;"
                >
                  99
                </div>
                <div
                  class="cm-gutterElement cm-activeLineGutter"
                  style="height: 14px;"
                >
                  1
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  2
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  3
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  4
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  5
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  6
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  7
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  8
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  9
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  10
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  11
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  12
                </div>
              </div>
              <div
                class="cm-gutter cm-foldGutter"
              >
                <div
                  class="cm-gutterElement"
                  style="height: 0px; visibility: hidden; pointer-events: none;"
                >
                  <span
                    title="Unfold line"
                  >
                    ›
                  </span>
                </div>
                <div
                  class="cm-gutterElement cm-activeLineGutter"
                  style="height: 14px;"
                >
                  <span
                    title="Fold line"
                  >
                    ⌄
                  </span>
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  <span
                    title="Fold line"
                  >
                    ⌄
                  </span>
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px; margin-top: 28px;"
                >
                  <span
                    title="Fold line"
                  >
                    ⌄
                  </span>
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px; margin-top: 42px;"
                >
                  <span
                    title="Fold line"
                  >
                    ⌄
                  </span>
                </div>
              </div>
            </div>
            <div
              aria-multiline="true"
              autocapitalize="off"
              autocorrect="off"
              class="cm-content cm-lineWrapping"
              contenteditable="true"
              data-language="json"
              role="textbox"
              spellcheck="false"
              style="tab-size: 4;"
              translate="no"
            >
              <div
                class="cm-activeLine cm-line"
              >
                [
              </div>
              <div
                class="cm-indent-markers cm-line"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat;"
              >
                  {
              </div>
              <div
                class="cm-indent-markers cm-line"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat,repeating-linear-gradient(to right, var(--indent-marker-bg-color) 0 1px, transparent 1px 2ch) 2.5ch/calc(2ch - 1px) no-repeat;"
              >
                    
                <span
                  class="ͼo"
                >
                  "id"
                </span>
                : 
                <span
                  class="ͼp"
                >
                  1
                </span>
              </div>
              <div
                class="cm-indent-markers cm-line"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat;"
              >
                  },
              </div>
              <div
                class="cm-indent-markers cm-line"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat;"
              >
                  {
              </div>
              <div
                class="cm-indent-markers cm-line"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat,repeating-linear-gradient(to right, var(--indent-marker-bg-color) 0 1px, transparent 1px 2ch) 2.5ch/calc(2ch - 1px) no-repeat;"
              >
                    
                <span
                  class="ͼo"
                >
                  "id"
                </span>
                : 
                <span
                  class="ͼp"
                >
                  2
                </span>
                ,
              </div>
              <div
                class="cm-indent-markers cm-line"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat,repeating-linear-gradient(to right, var(--indent-marker-bg-color) 0 1px, transparent 1px 2ch) 2.5ch/calc(2ch - 1px) no-repeat;"
              >
                    
                <span
                  class="ͼo"
                >
                  "name"
                </span>
                : 
                <span
                  class="ͼr"
                >
                  "Joe"
                </span>
              </div>
              <div
                class="cm-indent-markers cm-line"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat;"
              >
                  },
              </div>
              <div
                class="cm-indent-markers cm-line"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat;"
              >
                  {
              </div>
              <div
                class="cm-indent-markers cm-line"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat,repeating-linear-gradient(to right, var(--indent-marker-bg-color) 0 1px, transparent 1px 2ch) 2.5ch/calc(2ch - 1px) no-repeat;"
              >
                    
                <span
                  class="ͼo"
                >
                  "id"
                </span>
                : 
                <span
                  class="ͼp"
                >
                  3
                </span>
              </div>
              <div
                class="cm-indent-markers cm-line"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat;"
              >
                  }
              </div>
              <div
                class="cm-line"
              >
                ]
              </div>
            </div>
            <div
              aria-hidden="true"
              class="cm-layer cm-layer-above cm-cursorLayer"
              style="z-index: 150; animation-duration: 1200ms;"
            />
            <div
              aria-hidden="true"
              class="cm-layer cm-selectionLayer"
              style="z-index: -2;"
            />
          </div>
        </div>
      </div>
       
      <!---->
       
      <!---->
      <div
        class="jse-status-bar svelte-1ulj7zd"
      >
        <!---->
         
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
      
      <!---->
      <!---->
      <!---->
    </div>
    
    <!---->
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
  <!---->
  
</div>
`;

exports[`JSONEditor > render tree mode 1`] = `
<div>
  <!---->
  <!---->
   
  <div
    class="jse-main svelte-57bmz4"
  >
    <!---->
    <!---->
    <div
      class="jse-tree-mode svelte-vrx1dr"
      role="tree"
      tabindex="-1"
    >
      <div
        class="jse-menu svelte-pf7s2l"
      >
        <!---->
         
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button jse-first svelte-pf7s2l"
          title="Switch to text mode (current mode: tree)"
          type="button"
        >
          <!---->
           
          text
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button  jse-selected svelte-pf7s2l"
          title="Switch to tree mode (current mode: tree)"
          type="button"
        >
          <!---->
           
          tree
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button jse-last svelte-pf7s2l"
          title="Switch to table mode (current mode: tree)"
          type="button"
        >
          <!---->
           
          table
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-pf7s2l"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-expand-all svelte-pf7s2l"
          title="Expand all"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M 0,448 V 512 h 512 v -64 z M 0,0 V 64 H 512 V 0 Z M 256,96 128,224 h 256 z M 256,416 384,288 H 128 Z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-collapse-all svelte-pf7s2l"
          title="Collapse all"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="m 0,224 v 64 h 512 v -64 z M 256,192 384,64 H 128 Z M 256,320 128,448 h 256 z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-pf7s2l"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-sort svelte-pf7s2l"
          title="Sort"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="14.222222222222221"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 576 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M151.6 469.6C145.5 476.2 137 480 128 480s-17.5-3.8-23.6-10.4l-88-96c-11.9-13-11.1-33.3 2-45.2s33.3-11.1 45.2 2L96 365.7 96 64c0-17.7 14.3-32 32-32s32 14.3 32 32l0 301.7 32.4-35.4c11.9-13 32.2-13.9 45.2-2s13.9 32.2 2 45.2l-88 96zM320 32l32 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l96 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-96 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l160 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-160 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l224 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-224 0c-17.7 0-32-14.3-32-32s14.3-32 32-32z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-transform svelte-pf7s2l"
          title="Transform contents (filter, sort, project)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M3.9 54.9C10.5 40.9 24.5 32 40 32l432 0c15.5 0 29.5 8.9 36.1 22.9s4.6 30.5-5.2 42.5L320 320.9 320 448c0 12.1-6.8 23.2-17.7 28.6s-23.8 4.3-33.5-3l-64-48c-8.1-6-12.8-15.5-12.8-25.6l0-79.1L9 97.3C-.7 85.4-2.8 68.8 3.9 54.9z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-search svelte-pf7s2l"
          title="Search (Ctrl+F)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-contextmenu svelte-pf7s2l"
          title="Open context menu (Click here, right click on the selection, or use the context menu button or Ctrl+Q)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 128 512"
            width="4"
          >
            <!---->
            <!---->
            <path
              d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-pf7s2l"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-undo svelte-pf7s2l"
          disabled=""
          title="Undo (Ctrl+Z)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M125.7 160l50.3 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L48 224c-17.7 0-32-14.3-32-32L16 64c0-17.7 14.3-32 32-32s32 14.3 32 32l0 51.2L97.6 97.6c87.5-87.5 229.3-87.5 316.8 0s87.5 229.3 0 316.8s-229.3 87.5-316.8 0c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0c62.5 62.5 163.8 62.5 226.3 0s62.5-163.8 0-226.3s-163.8-62.5-226.3 0L125.7 160z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-redo svelte-pf7s2l"
          disabled=""
          title="Redo (Ctrl+Shift+Z)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M386.3 160L336 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32-14.3 32-32l0-128c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 51.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0s-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3s163.8-62.5 226.3 0L386.3 160z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <div
          class="jse-space svelte-pf7s2l"
        />
        
        
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <div
        class="jse-navigation-bar svelte-xs03gj"
      >
        <!---->
        <!---->
         
        <div
          class="jse-navigation-bar-item svelte-752ro1"
        >
          <button
            class="jse-navigation-bar-button jse-navigation-bar-arrow svelte-752ro1"
            type="button"
          >
            <svg
              aria-label=""
              class="fa-icon  svelte-1mc5hvj"
              height="16"
              role="presentation"
              style=""
              version="1.1"
              viewBox="0 0 320 512"
              width="10"
            >
              <!---->
              <!---->
              <path
                d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"
              />
              <!---->
              <!---->
              <!---->
              
              <!---->
            </svg>
            <!---->
          </button>
           
          <!---->
        </div>
        <!---->
        <!---->
         
        <button
          class="jse-navigation-bar-edit svelte-xs03gj flex"
          title="Edit the selected path"
          type="button"
        >
          <span
            class="jse-navigation-bar-space svelte-xs03gj"
          >
             
          </span>
           
          <svg
            aria-label=""
            class="fa-icon  svelte-1mc5hvj"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160L0 416c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-96c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 96c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l96 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 64z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
        </button>
      </div>
      <!---->
       
      <label
        class="jse-hidden-input-label svelte-vrx1dr"
      >
        <input
          class="jse-hidden-input svelte-vrx1dr"
          readonly=""
          tabindex="-1"
          type="text"
        />
      </label>
       
      <div
        class="jse-search-box-container svelte-vrx1dr"
      >
        <!---->
        
        <!---->
      </div>
       
      <div
        class="jse-contents svelte-vrx1dr"
        data-jsoneditor-scrollable-contents="true"
      >
        <!---->
         
        <div
          aria-selected="false"
          class="jse-json-node jse-expanded svelte-wovgt4 jse-root"
          data-path=""
          role="treeitem"
          style="--level: 0;"
          tabindex="-1"
        >
          <div
            class="jse-header-outer svelte-wovgt4"
          >
            <div
              class="jse-header svelte-wovgt4"
            >
              <button
                class="jse-expand svelte-wovgt4"
                title="Expand or collapse this array (Ctrl+Click to expand/collapse recursively)"
                type="button"
              >
                <svg
                  aria-label=""
                  class="fa-icon  svelte-1mc5hvj"
                  height="16"
                  role="presentation"
                  style=""
                  version="1.1"
                  viewBox="0 0 320 512"
                  width="10"
                >
                  <!---->
                  <!---->
                  <path
                    d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"
                  />
                  <!---->
                  <!---->
                  <!---->
                  
                  <!---->
                </svg>
                <!---->
              </button>
               
              <!---->
               
              <!---->
               
              <div
                class="jse-meta svelte-wovgt4"
              >
                <div
                  class="jse-meta-inner svelte-wovgt4"
                  data-type="selectable-value"
                >
                  <div
                    class="jse-bracket svelte-wovgt4"
                  >
                    [
                  </div>
                   
                  <span
                    class="jse-tag jse-expanded svelte-wovgt4"
                  >
                    3
                items
                  </span>
                    
                  <!---->
                </div>
              </div>
               
              <!---->
            </div>
             
            <!---->
             
            <div
              class="jse-insert-selection-area jse-inside svelte-wovgt4"
              data-type="insert-selection-area-inside"
              role="none"
            />
            <!---->
          </div>
           
          <div
            class="jse-items svelte-wovgt4"
          >
            <!---->
             
            <!---->
            <!---->
            <div
              aria-selected="false"
              class="jse-json-node jse-expanded svelte-wovgt4"
              data-path="%2F0"
              role="treeitem"
              style="--level: 1;"
              tabindex="-1"
            >
              <!---->
              <div
                class="jse-header-outer svelte-wovgt4"
              >
                <div
                  class="jse-header svelte-wovgt4"
                >
                  <button
                    class="jse-expand svelte-wovgt4"
                    title="Expand or collapse this object (Ctrl+Click to expand/collapse recursively)"
                    type="button"
                  >
                    <svg
                      aria-label=""
                      class="fa-icon  svelte-1mc5hvj"
                      height="16"
                      role="presentation"
                      style=""
                      version="1.1"
                      viewBox="0 0 320 512"
                      width="10"
                    >
                      <!---->
                      <!---->
                      <path
                        d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"
                      />
                      <!---->
                      <!---->
                      <!---->
                      
                      <!---->
                    </svg>
                    <!---->
                  </button>
                   
                  <div
                    class="jse-identifier svelte-wovgt4"
                    slot="identifier"
                  >
                    <div
                      class="jse-index svelte-wovgt4"
                    >
                      0
                    </div>
                  </div>
                  <!---->
                   
                  <div
                    class="jse-separator svelte-wovgt4"
                  >
                    :
                  </div>
                  <!---->
                   
                  <div
                    class="jse-meta svelte-wovgt4"
                    data-type="selectable-value"
                  >
                    <div
                      class="jse-meta-inner svelte-wovgt4"
                    >
                      <div
                        class="jse-bracket jse-expanded svelte-wovgt4"
                      >
                        {
                      </div>
                      <!---->
                    </div>
                  </div>
                   
                  <!---->
                </div>
                 
                <!---->
                 
                <div
                  class="jse-insert-selection-area jse-inside svelte-wovgt4"
                  data-type="insert-selection-area-inside"
                  role="none"
                />
                <!---->
              </div>
               
              <div
                class="jse-props svelte-wovgt4"
              >
                <!---->
                 
                <!---->
                <div
                  aria-selected="false"
                  class="jse-json-node svelte-wovgt4"
                  data-path="%2F0%2Fid"
                  role="treeitem"
                  style="--level: 2;"
                  tabindex="-1"
                >
                  <!---->
                  <div
                    class="jse-contents-outer svelte-wovgt4"
                  >
                    <div
                      class="jse-contents svelte-wovgt4"
                    >
                      <div
                        class="jse-key-outer svelte-wovgt4"
                        slot="identifier"
                      >
                        <!---->
                        <div
                          class="jse-key svelte-2iqnqn"
                          data-type="selectable-key"
                          role="none"
                        >
                          id
                          <!---->
                        </div>
                        <!---->
                         
                        <!---->
                        <!---->
                      </div>
                      <!---->
                       
                      <div
                        class="jse-separator svelte-wovgt4"
                      >
                        :
                      </div>
                      <!---->
                       
                      <div
                        class="jse-value-outer svelte-wovgt4"
                      >
                        <!---->
                        <!---->
                        <!---->
                        <div
                          class="jse-value jse-number svelte-c0g9qz"
                          data-type="selectable-value"
                          role="button"
                          tabindex="-1"
                        >
                          1
                          <!---->
                        </div>
                        
                        
                        
                        <!---->
                      </div>
                       
                      <!---->
                    </div>
                     
                    <!---->
                     
                    <div
                      class="jse-insert-selection-area jse-after svelte-wovgt4"
                      data-type="insert-selection-area-after"
                      role="none"
                    />
                    <!---->
                  </div>
                  
                  <!---->
                   
                  <!---->
                </div>
                
                <!---->
              </div>
               
              <div
                class="jse-footer-outer svelte-wovgt4"
              >
                <div
                  class="jse-footer svelte-wovgt4"
                  data-type="selectable-value"
                >
                  <div
                    class="jse-bracket svelte-wovgt4"
                  >
                    }
                  </div>
                </div>
                 
                <div
                  class="jse-insert-selection-area jse-after svelte-wovgt4"
                  data-type="insert-selection-area-after"
                  role="none"
                />
                <!---->
              </div>
              <!---->
              
              <!---->
               
              <!---->
            </div>
            
            <!---->
            <div
              aria-selected="false"
              class="jse-json-node jse-expanded svelte-wovgt4"
              data-path="%2F1"
              role="treeitem"
              style="--level: 1;"
              tabindex="-1"
            >
              <!---->
              <div
                class="jse-header-outer svelte-wovgt4"
              >
                <div
                  class="jse-header svelte-wovgt4"
                >
                  <button
                    class="jse-expand svelte-wovgt4"
                    title="Expand or collapse this object (Ctrl+Click to expand/collapse recursively)"
                    type="button"
                  >
                    <svg
                      aria-label=""
                      class="fa-icon  svelte-1mc5hvj"
                      height="16"
                      role="presentation"
                      style=""
                      version="1.1"
                      viewBox="0 0 320 512"
                      width="10"
                    >
                      <!---->
                      <!---->
                      <path
                        d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"
                      />
                      <!---->
                      <!---->
                      <!---->
                      
                      <!---->
                    </svg>
                    <!---->
                  </button>
                   
                  <div
                    class="jse-identifier svelte-wovgt4"
                    slot="identifier"
                  >
                    <div
                      class="jse-index svelte-wovgt4"
                    >
                      1
                    </div>
                  </div>
                  <!---->
                   
                  <div
                    class="jse-separator svelte-wovgt4"
                  >
                    :
                  </div>
                  <!---->
                   
                  <div
                    class="jse-meta svelte-wovgt4"
                    data-type="selectable-value"
                  >
                    <div
                      class="jse-meta-inner svelte-wovgt4"
                    >
                      <div
                        class="jse-bracket jse-expanded svelte-wovgt4"
                      >
                        {
                      </div>
                      <!---->
                    </div>
                  </div>
                   
                  <!---->
                </div>
                 
                <!---->
                 
                <div
                  class="jse-insert-selection-area jse-inside svelte-wovgt4"
                  data-type="insert-selection-area-inside"
                  role="none"
                />
                <!---->
              </div>
               
              <div
                class="jse-props svelte-wovgt4"
              >
                <!---->
                 
                <!---->
                <div
                  aria-selected="false"
                  class="jse-json-node svelte-wovgt4"
                  data-path="%2F1%2Fid"
                  role="treeitem"
                  style="--level: 2;"
                  tabindex="-1"
                >
                  <!---->
                  <div
                    class="jse-contents-outer svelte-wovgt4"
                  >
                    <div
                      class="jse-contents svelte-wovgt4"
                    >
                      <div
                        class="jse-key-outer svelte-wovgt4"
                        slot="identifier"
                      >
                        <!---->
                        <div
                          class="jse-key svelte-2iqnqn"
                          data-type="selectable-key"
                          role="none"
                        >
                          id
                          <!---->
                        </div>
                        <!---->
                         
                        <!---->
                        <!---->
                      </div>
                      <!---->
                       
                      <div
                        class="jse-separator svelte-wovgt4"
                      >
                        :
                      </div>
                      <!---->
                       
                      <div
                        class="jse-value-outer svelte-wovgt4"
                      >
                        <!---->
                        <!---->
                        <!---->
                        <div
                          class="jse-value jse-number svelte-c0g9qz"
                          data-type="selectable-value"
                          role="button"
                          tabindex="-1"
                        >
                          2
                          <!---->
                        </div>
                        
                        
                        
                        <!---->
                      </div>
                       
                      <!---->
                    </div>
                     
                    <!---->
                     
                    <div
                      class="jse-insert-selection-area jse-after svelte-wovgt4"
                      data-type="insert-selection-area-after"
                      role="none"
                    />
                    <!---->
                  </div>
                  
                  <!---->
                   
                  <!---->
                </div>
                
                <!---->
                <div
                  aria-selected="false"
                  class="jse-json-node svelte-wovgt4"
                  data-path="%2F1%2Fname"
                  role="treeitem"
                  style="--level: 2;"
                  tabindex="-1"
                >
                  <!---->
                  <div
                    class="jse-contents-outer svelte-wovgt4"
                  >
                    <div
                      class="jse-contents svelte-wovgt4"
                    >
                      <div
                        class="jse-key-outer svelte-wovgt4"
                        slot="identifier"
                      >
                        <!---->
                        <div
                          class="jse-key svelte-2iqnqn"
                          data-type="selectable-key"
                          role="none"
                        >
                          name
                          <!---->
                        </div>
                        <!---->
                         
                        <!---->
                        <!---->
                      </div>
                      <!---->
                       
                      <div
                        class="jse-separator svelte-wovgt4"
                      >
                        :
                      </div>
                      <!---->
                       
                      <div
                        class="jse-value-outer svelte-wovgt4"
                      >
                        <!---->
                        <!---->
                        <!---->
                        <div
                          class="jse-value jse-string svelte-c0g9qz"
                          data-type="selectable-value"
                          role="button"
                          tabindex="-1"
                        >
                          Joe
                          <!---->
                        </div>
                        
                        
                        
                        <!---->
                      </div>
                       
                      <!---->
                    </div>
                     
                    <!---->
                     
                    <div
                      class="jse-insert-selection-area jse-after svelte-wovgt4"
                      data-type="insert-selection-area-after"
                      role="none"
                    />
                    <!---->
                  </div>
                  
                  <!---->
                   
                  <!---->
                </div>
                
                <!---->
              </div>
               
              <div
                class="jse-footer-outer svelte-wovgt4"
              >
                <div
                  class="jse-footer svelte-wovgt4"
                  data-type="selectable-value"
                >
                  <div
                    class="jse-bracket svelte-wovgt4"
                  >
                    }
                  </div>
                </div>
                 
                <div
                  class="jse-insert-selection-area jse-after svelte-wovgt4"
                  data-type="insert-selection-area-after"
                  role="none"
                />
                <!---->
              </div>
              <!---->
              
              <!---->
               
              <!---->
            </div>
            
            <!---->
            <div
              aria-selected="false"
              class="jse-json-node jse-expanded svelte-wovgt4"
              data-path="%2F2"
              role="treeitem"
              style="--level: 1;"
              tabindex="-1"
            >
              <!---->
              <div
                class="jse-header-outer svelte-wovgt4"
              >
                <div
                  class="jse-header svelte-wovgt4"
                >
                  <button
                    class="jse-expand svelte-wovgt4"
                    title="Expand or collapse this object (Ctrl+Click to expand/collapse recursively)"
                    type="button"
                  >
                    <svg
                      aria-label=""
                      class="fa-icon  svelte-1mc5hvj"
                      height="16"
                      role="presentation"
                      style=""
                      version="1.1"
                      viewBox="0 0 320 512"
                      width="10"
                    >
                      <!---->
                      <!---->
                      <path
                        d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"
                      />
                      <!---->
                      <!---->
                      <!---->
                      
                      <!---->
                    </svg>
                    <!---->
                  </button>
                   
                  <div
                    class="jse-identifier svelte-wovgt4"
                    slot="identifier"
                  >
                    <div
                      class="jse-index svelte-wovgt4"
                    >
                      2
                    </div>
                  </div>
                  <!---->
                   
                  <div
                    class="jse-separator svelte-wovgt4"
                  >
                    :
                  </div>
                  <!---->
                   
                  <div
                    class="jse-meta svelte-wovgt4"
                    data-type="selectable-value"
                  >
                    <div
                      class="jse-meta-inner svelte-wovgt4"
                    >
                      <div
                        class="jse-bracket jse-expanded svelte-wovgt4"
                      >
                        {
                      </div>
                      <!---->
                    </div>
                  </div>
                   
                  <!---->
                </div>
                 
                <!---->
                 
                <div
                  class="jse-insert-selection-area jse-inside svelte-wovgt4"
                  data-type="insert-selection-area-inside"
                  role="none"
                />
                <!---->
              </div>
               
              <div
                class="jse-props svelte-wovgt4"
              >
                <!---->
                 
                <!---->
                <div
                  aria-selected="false"
                  class="jse-json-node svelte-wovgt4"
                  data-path="%2F2%2Fid"
                  role="treeitem"
                  style="--level: 2;"
                  tabindex="-1"
                >
                  <!---->
                  <div
                    class="jse-contents-outer svelte-wovgt4"
                  >
                    <div
                      class="jse-contents svelte-wovgt4"
                    >
                      <div
                        class="jse-key-outer svelte-wovgt4"
                        slot="identifier"
                      >
                        <!---->
                        <div
                          class="jse-key svelte-2iqnqn"
                          data-type="selectable-key"
                          role="none"
                        >
                          id
                          <!---->
                        </div>
                        <!---->
                         
                        <!---->
                        <!---->
                      </div>
                      <!---->
                       
                      <div
                        class="jse-separator svelte-wovgt4"
                      >
                        :
                      </div>
                      <!---->
                       
                      <div
                        class="jse-value-outer svelte-wovgt4"
                      >
                        <!---->
                        <!---->
                        <!---->
                        <div
                          class="jse-value jse-number svelte-c0g9qz"
                          data-type="selectable-value"
                          role="button"
                          tabindex="-1"
                        >
                          3
                          <!---->
                        </div>
                        
                        
                        
                        <!---->
                      </div>
                       
                      <!---->
                    </div>
                     
                    <!---->
                     
                    <div
                      class="jse-insert-selection-area jse-after svelte-wovgt4"
                      data-type="insert-selection-area-after"
                      role="none"
                    />
                    <!---->
                  </div>
                  
                  <!---->
                   
                  <!---->
                </div>
                
                <!---->
              </div>
               
              <div
                class="jse-footer-outer svelte-wovgt4"
              >
                <div
                  class="jse-footer svelte-wovgt4"
                  data-type="selectable-value"
                >
                  <div
                    class="jse-bracket svelte-wovgt4"
                  >
                    }
                  </div>
                </div>
                 
                <div
                  class="jse-insert-selection-area jse-after svelte-wovgt4"
                  data-type="insert-selection-area-after"
                  role="none"
                />
                <!---->
              </div>
              <!---->
              
              <!---->
               
              <!---->
            </div>
            
            <!---->
             
            <!---->
            <!---->
          </div>
           
          <div
            class="jse-footer-outer svelte-wovgt4"
          >
            <div
              class="jse-footer svelte-wovgt4"
              data-type="selectable-value"
            >
              <span
                class="jse-bracket svelte-wovgt4"
              >
                ]
              </span>
            </div>
             
            <!---->
          </div>
          <!---->
          <!---->
           
          <!---->
        </div>
        <!---->
      </div>
       
      <!---->
       
      <!---->
       
      <!---->
      
      <!---->
      <!---->
      <!---->
    </div>
     
    <!---->
     
    <!---->
    
    
    <!---->
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
  <!---->
  
</div>
`;
